--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,14 @@ edition = "2018"
 [dependencies]
 bootloader = "0.9.23"
 volatile = "0.2.6"
+spin = "0.5.2"
 
 [profile.dev]
 panic = "abort"
 
 [profile.release]
 panic = "abort"
+
+[dependencies.lazy_static]
+version = "1.0"
+features = ["spin_no_std"]
