--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 bootloader = "0.9.23"
 volatile = "0.2.6"
 spin = "0.5.2"
+lazy_static = { version = "1.0", features = ["spin_no_std"] }
 
 
 [profile.dev]
