--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,8 @@ lazy_static = { version = "1.0", features = ["spin_no_std"] }
 
 
 [profile.dev]
-panic = "abort"
+#panic = "abort"
 
 [profile.release]
-panic = "abort"
+#panic = "abort"
 
