--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,9 @@ spin = "0.5.2"
 lazy_static = { version = "1.0", features = ["spin_no_std"] }
 
 
-[profile.dev]
+#[profile.dev]
 #panic = "abort"
 
 [profile.release]
-#panic = "abort"
+panic = "abort"
 
