--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bootloader = "0.9.23"
+bootloader = { version = "0.9", features = ["map_physical_memory"]}
 volatile = "0.2.6"
 spin = "0.5.2"
 lazy_static = { version = "1.0", features = ["spin_no_std"] }
