--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ spin = "0.5.2"
 lazy_static = { version = "1.0", features = ["spin_no_std"] }
 x86_64 = "0.14.2"
 
-[profile.dev]
-panic = "abort"
+#[profile.dev]
+#panic = "abort"
 
 [profile.release]
 panic = "abort"
