--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ volatile = "0.2.6"
 spin = "0.5.2"
 lazy_static = { version = "1.0", features = ["spin_no_std"] }
 x86_64 = "0.14.2"
+pic8259 = "0.10.1"
 
 
 [profile.dev]
